# Sharpi

./: .gitignore  LICENSE  README.md  Sharpi.sln
.github/CheckVersionPublished/: CheckVersionPublished.sln  NugetVersions.cs  Program.cs
.github/workflows/: dotnet.yml
Circuits/: README.md  dcvoltagesense.txt  irled28khz.txt
Examples/: README.md
Examples/button/: Program.cs  button.csproj  button.sln  postbuild.bat
Examples/buzzerpassive/: Program.cs  buzzerpassive.csproj  buzzerpassive.sln  postbuild.bat
Examples/displaydrm/: Program.cs  displaydrm.csproj  displaydrm.sln  postbuild.bat
Examples/displaysh1106/: Program.cs  displaysh1106.csproj  displaysh1106.sln  postbuild.bat
Sharpi/: Adc.cs  Bitmap.cs  Button.cs  Buzzer.cs  Canvas.cs  Color.cs  Display.cs  Font.cs  Gpio.cs  Helper.cs  Info.cs  Led.cs  NuGet.md  Paint.cs  Pot.cs  Pwm.cs  README.md  Rect.cs  Sender.cs  Sensor.cs  Sharpi.csproj  UsbWorker.cs
Sharpi/cpp/: CMakeLists.txt  CMakeSettings.json
Sharpi/cpp/sharpi/: Adc.h  AdcMcp3008.cpp  AdcMcp3008.h  CMakeLists.txt  DevGpio.cpp  DevGpio.h  DevI2c.cpp  DevI2c.h  DevSpi.cpp  DevSpi.h  Display.h  DisplayDrm.cpp  DisplayDrm.h  DisplayPcd8544.cpp  DisplayPcd8544.h  DisplaySh1106.cpp  DisplaySh1106.h  DisplaySsd1351.cpp  DisplaySsd1351.h  DisplayTm1637.cpp  DisplayTm1637.h  Info.cpp  Info.h  Pot.h  PotDs3502.cpp  PotDs3502.h  Sensor.h  SensorAmg8833.cpp  SensorAmg8833.h  SensorIr28khz.cpp  SensorIr28khz.h  SysPwm.cpp  SysPwm.h  UsbWorker.cpp  UsbWorker.h  main.cpp  sharpi.cpp  sharpi.h
Sharpi/cpp/sharpi/gpiod/: LICENSE
Sharpi/cpp/sharpi/include/linux/: v4l2-controls.h  version.h  videodev2.h
Sharpi/ino/UsbWorker/: UsbWorker.ino
